fix y overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   align-items: center;
   height: 100vh;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .button-container{
